# simple-agent-public

./: .env.example  .gitignore  README.md  implementation.md  plan.md  pyproject.toml
.claude/: settings.local.json
docs/: cli.md  code-guide.md  fullstack.md
evals/: conftest.py  helpers.py  test_agent.py  test_retrieval.py
evals/cases/: compliance.yaml  cross_document.yaml  enumeration.yaml  exploratory.yaml  extraction.yaml  known_item.yaml  revisions.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/agent/: cli.py  core.py  embeddings.py  prompts.py  server.py  store.py
src/agent/ingest/: docx_extract.py  filename.py  pipeline.py
src/agent/search/: tools.py
tests/: test_filename.py
